@@ -1,5 +1,6 @@
 3.4.1
 - strong/em are now supported by P4A tooltips
+- DSN charset support was added to set DB connection charset
 
 3.4.0
 - Zend Framework was updated to 1.8.4
